--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,12 @@
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://www.home-assistant.io/integrations/evsemaster",
+  "documentation": "https://github.com/RafaelSchridi/evsemaster-homeassistant",
+  "issue_tracker": "https://github.com/RafaelSchridi/evsemaster-homeassistant/issues",
   "homekit": {},
   "iot_class": "local_push",
   "quality_scale": "bronze",
-  "requirements": [],
+  "requirements": ["evsemaster==1.0.0"],
   "ssdp": [],
   "zeroconf": [],
   "version": "1.0.0"
