--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
   "homekit": {},
   "iot_class": "local_push",
   "quality_scale": "bronze",
-  "requirements": ["evsemaster==1.0.0"],
   "ssdp": [],
   "zeroconf": [],
-  "version": "1.0.0"
+  "version": "1.0.1",
+  "requirements": ["evsemaster==1.1.0"]
 }
