--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
   "quality_scale": "bronze",
   "ssdp": [],
   "zeroconf": [],
-  "version": "1.0.2",
-  "requirements": []
+  "version": "1.1.0",
+  "requirements": ["evsemaster==1.2.0"]
 }
